package app.domain.model;

public class TestParameter {
    private String pCode;

    /**
     *
     * @param pCode Parameter Code
     */
    public TestParameter(String pCode) {
        this.pCode = pCode;
    }

}
